force-app/main/default/objects/Health_Check_Org_Metric_Feature_Type__mdt/Health_Check_Org_Metric_Feature_Type__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata for storing the different org metric feature types and converting their values to correctly spaced and capitalised words to be used in the health check lite tool.</description>
    <label>Health Check Org Metric Feature Type</label>
    <pluralLabel>Health Check Org Metric Feature Types</pluralLabel>
</CustomObject>