force-app/main/default/objects/Health_Check_Org_Metric_Feature_Type__mdt/fields/Formatted_Name__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Name__c</fullName>
    <label>Formatted Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>