force-app/main/default/objects/Health_Check_Org_Metric_Feature_Type__mdt/fields/Recommendation_Text__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Text__c</fullName>
    <label>Recommendation Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>